# toys

./: AnalyticFieldModel.cc  AnalyticFieldModel.h  AnnularFieldSim.cc  AnnularFieldSim.h  AnnularFieldSimLinkDef.h  Averagize.C  Chain_data_clusprofile.C  Constants.h  CreateExternalFieldMap.C  CreateSpacechargeHist.C  CreateSpacechargeHist.sh  CylindricalFieldSim.cc  CylindricalFieldSim.h  CylindricalFieldSimLinkDef.h  FieldSim.C  FieldSim.cc  FieldSim.h  FieldSimLinkDef.h  Fun4All_Garfield_Static.C  HeuristicCharge.C  ImaginaryBessel.wls  MakeFlatDummyCorrection.C  Makefile.am  MaskRegion.C  ParseIoLabs.C  ParseOGP.C  PoorManSmooth.C  QPileUp.cc  QPileUp.h  QPileUpLinkDef.h  QuickDistort.C  README.md  ResolutionScan.sh  Rossegger.C  Rossegger.cc  Rossegger.h  ScaleChargeMap.C  Shifter.C  average_distortion_study.C  basic_interpolate.C  (+34 more)
CMconstruction/: ParseOGP.C  contourcheck.py  plotAll.gnu  plotAllMulti.gnu  spotcheck.gnu
